--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,12 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --title-color: #DB00FF;
+  --accent-color: #FF0070;
+  --header-decor-color: #FF0070;
+  --text-title-color: #000028;
+  --content-color: #F1B2CE;
+  --main-title-color: #FF0070;
+  --header-menu-hover: rgba(255, 0, 112, 0.4);
+  --background-image: url(../images/cover-image-dark.png);
 }
