--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,25 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --title-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --header-decor-color: transparent;
+  --text-title-color: #353430;
+  --content-color: #353430;
+  --main-title-color: #353430;
+  --header-menu-hover: rgba(50, 49, 45, 0.4);
+  --background-image: url(../images/cover-image-light.png);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --title-color: #FFC2E6;
+    --accent-color: #FF8DCB;
+    --header-decor-color: transparent;
+    --text-title-color: #353430;
+    --content-color: #353430;
+    --main-title-color: #353430;
+    --header-menu-hover: rgba(50, 49, 45, 0.4);
+    --background-image: url(../images/cover-image-light.png);
+  }
 }
