--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,17 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --title-color: #DB00FF;
+  --accent-color: #FF0070;
+  --header-decor-color: #FF0070;
+  --text-title-color: #000028;
+  --content-color: #F1B2CE;
+  --main-title-color: #FF0070;
+  --header-menu-hover: rgba(255, 0, 112, 0.4);
+  --background-image: url(../images/cover-image-dark.png);
+  --font: 'IBM Plex mono';
+  --font-size-heading: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --indent: 20px;
+}
