--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,6 @@
   font-size: var(--font-size-heading);
   justify-self: start;
   align-self: center;
-  word-spacing: 0.45em;
   line-height: 0.825em;
   grid-area: heading;
 }
@@ -43,6 +42,7 @@
   margin-inline-end: 20px;
   align-self: center;
   grid-area: content__title;
+  margin-block-end: 2vi;
 }
 
 .title-decor {
@@ -64,9 +64,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-size: 18px;
-  gap: 20px;
+  gap: 14px;
   margin-block-start: 1.1em;
+  padding-inline-start: 0.1em;
 }
 
 .header__theme-menu-button {
@@ -76,14 +76,17 @@
   background-color: transparent;
   border: none;
   padding: 1px 10px;
+  font-size: 18px;
 }
 
 .header__theme-menu-button_active {
+  inline-size: 4em;
   outline: 1px solid currentColor;
+  outline-offset: -2px;
 }
 
 .header__theme-menu {
- grid-area: header__theme-menu;
+  grid-area: header__theme-menu;
 }
 
 .header-decor {
@@ -95,6 +98,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 25px;
+  letter-spacing: 0.1em;
   color: var(--header-decor-color);
 }
 
@@ -107,10 +111,10 @@
   top: 8px;
   box-shadow: 0 0 3px 3px var(--header-decor-color);
   position: absolute;
-  margin-inline-start: 10px;
+  right: -19px;
 }
 
-.header::before {
+.decorated-zone::before {
   content: "";
   width: 25px;
   height: 25px;
@@ -121,7 +125,7 @@
   top: var(--indent);
 }
 
-.header::after {
+.decorated-zone::after {
   content: "";
   width: 25px;
   height: 25px;
@@ -137,7 +141,7 @@
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
-  line-height: 23px;
+  line-height: 1.28em;
   color: var(--main-title-color);
 }
 
@@ -148,8 +152,6 @@
   font-size: 18px;
   line-height: 1.3;
   color: var(--content-color);
-  letter-spacing: 0em;
-  word-spacing: 0.7em;
 }
 
 .content-main {
@@ -158,48 +160,48 @@
 
 .content-section {
   display: grid;
-  padding-block-start: 60px;
+  padding-block-start: 80px;
   gap: 20px;
 }
 
-.section-item1 {
-  grid-template-columns: 1fr 2fr;
+.section-focus {
+  grid-template-columns: 0.97fr 2fr;
   grid-template-rows: 1fr 1fr;
 }
 
-.section-item1__title {
+.section-focus__title {
   grid-row: span 2;
 }
 
-.section-item2 {
-  grid-template-columns: 1fr 1fr 1fr;
+.section-concentration__title {
+  grid-area: section-concentration__title;
+}
+
+.multitask {
+  grid-area: multitask;
+}
+
+.meal {
+  grid-area: meal;
+}
+
+.gadget {
+  grid-area: gadget;
+}
+
+.section-concentration {
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto 1fr;
   grid-template-areas:
-  "section-item2__title . ."
-  "section-item2__sub-item1 section-item2__sub-item2 section-item2__sub-item3"
+  "section-concentration__title . ."
+  "multitask meal gadget"
 }
 
-.section-item2__title {
-  grid-area: section-item2__title;
-}
-
-.section-item2__sub-item1 {
-  grid-area: section-item2__sub-item1;
-}
-
-.section-item2__sub-item2 {
-  grid-area: section-item2__sub-item2;
-}
-
-.section-item2__sub-item3 {
-  grid-area: section-item2__sub-item3;
-}
-
-.section-item3 {
-  grid-template-columns: 1fr 2fr;
+.section-goldfish {
+  grid-template-columns: 0.97fr 2fr;
   grid-template-rows: auto;
 }
-.section-item3__title {
+.section-goldfish__title {
   grid-row: span 6;
 }
 
@@ -207,28 +209,28 @@
   font-weight: normal;
 }
 
-.section-item4 {
+.section-picture {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
 }
 
-.section-item4__title {
+.section-picture__title {
   grid-column: span 3;
 }
 
-.section-item4__picture1 {
+.section-picture__sunset {
   grid-column: span 2;
 }
 
-.section-item4__picture2 {
+.section-picture__sweets {
   grid-row: span 2;
 }
 
-.section-item4__picture3 {
+.section-picture__music {
   grid-row: span 2;
 }
 
-.section-item4__picture5 {
+.section-picture__street {
   grid-column: span 2;
 }
 
@@ -252,56 +254,50 @@
   font-weight: bold;
   color: var(--title-color);
   text-shadow: 2px 2px 0px #FF0070;
-  font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
+  font-size: var(--font-size-heading);
   justify-self: start;
   align-self: center;
 }
 
-.footer::before {
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--main-title-color);
-  border-right: 1px solid var(--main-title-color);
-  position: absolute;
-  right:  var(--indent);
-  top:  var(--indent);
-}
-
-.footer::after {
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--main-title-color);
-  border-left: 1px solid var(--main-title-color);
-  position: absolute;
-  left:  var(--indent);
-  bottom:  var(--indent);
-}
-
-a {
+.link {
   text-decoration: none;
   text-shadow: 2px 2px 0px var(--accent-color);
 }
 
-h3, h4 {
+.section-goldfish__sub-title {
+  font-family: var(--font), sans-serif;;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.27em;
+  color: var(--text-title-color);
+  background-color: var(--accent-color);
+}
+
+.section-goldfish .title-decor,
+.section-focus .title-decor,
+.section-concentration .title-decor {
   margin-block-end: 10px;
 }
 
-a:hover {
-  text-decoration: underline;
+.link:hover {
+  border-bottom: 2px solid currentColor;
 }
 
-.header__theme-menu-item:hover {
+.header__theme-menu-button {
+  border: 1px solid transparent;
+}
+
+.header__theme-menu-button:hover {
   border: 1px solid var(--header-menu-hover);
 }
 
-a:focus {
+.link:focus {
   outline: none;
 }
 
-a:focus-visible {
-  border-bottom: 1px solid var(--main-title-color);
+.link:focus-visible {
+  border: 1px solid var(--main-title-color);
 }
 
 .header__theme-menu-button:focus {
@@ -321,14 +317,26 @@ a:focus-visible {
     min-block-size: 1024px;
   }
 
-  .section-item2 {
+  .section-concentration {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, auto);
     grid-template-areas:
-    "section-item2__title . ."
-    "section-item2__sub-item1 section-item2__sub-item1 section-item2__sub-item1"
-    "section-item2__sub-item2 section-item2__sub-item2 section-item2__sub-item2"
-    "section-item2__sub-item3 section-item2__sub-item3 section-item2__sub-item3"
+    "section-concentration__title . ."
+    "multitask multitask multitask"
+    "meal meal meal"
+    "gadget gadget gadget"
+  }
+
+  .section-focus {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section-goldfish {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section-picture {
+    row-gap: 17px;
   }
 }
 
@@ -345,20 +353,15 @@ a:focus-visible {
     justify-content: center;
     align-items: end;
     padding-inline-end: 20px;
+    gap: 10px;
   } 
+
+  .content__title {
+    padding-block-start: 3px;
+  }
 
   .header__theme-menu {
     align-self: center;
-  }
-
-  .section-item2 {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, auto);
-    grid-template-areas:
-    "section-item2__title . ."
-    "section-item2__sub-item1 section-item2__sub-item1 section-item2__sub-item1"
-    "section-item2__sub-item2 section-item2__sub-item2 section-item2__sub-item2"
-    "section-item2__sub-item3 section-item2__sub-item3 section-item2__sub-item3"
   }
 }
 
@@ -377,13 +380,14 @@ a:focus-visible {
   .header__theme-menu-list {
     padding-inline-end: 2.6vi;
   }
- 
+
   :root {
     --indent: 2.6vi;
   }
 
   .content__title {
     margin-inline: 2.6vi;
+    margin-block-end: 4.2vb;
   }
 
   .header-decor {
@@ -391,55 +395,75 @@ a:focus-visible {
     top: 2.6vi;
   }
 
-  .section-item1 {
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-  }
- 
-  .section-item2 {
-    grid-template-areas:
-    "section-item2__title section-item2__title section-item2__title"
-    "section-item2__sub-item1 section-item2__sub-item1 section-item2__sub-item1"
-    "section-item2__sub-item2 section-item2__sub-item2 section-item2__sub-item2"
-    "section-item2__sub-item3 section-item2__sub-item3 section-item2__sub-item3"
-  }
-  
-  .section-item3 {
+  .section-focus {
     grid-template-columns: auto;
     grid-template-rows: auto;
   }
 
-  .section-item4 {
+  .section-concentration {
+    grid-template-areas:
+    "section-concentration__title section-concentration__title section-concentration__title"
+    "multitask multitask multitask"
+    "meal meal meal"
+    "gadget gadget gadget"
+  }
+  
+  .section-goldfish {
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    
+  }
+
+  .section-picture {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(6, auto);
+    gap: 3.0vi;
   }
   
-  .section-item4__title {
+  .section-picture__title {
     grid-column: span 3;
   }
   
-  .section-item4__picture1 {
+  .section-picture__sunset {
     grid-column: span 3;
   }
   
-  .section-item4__picture2 {
+  .section-picture__sweets {
     grid-column: span 3;
   }
   
-  .section-item4__picture3 {
+  .section-picture__music {
     grid-column: span 3;
   }
 
-  .section-item4__picture4 {
+  .section-picture__books {
     grid-column: span 3;
   }
   
-  .section-item4__picture5 {
+  .section-picture__street {
     grid-column: span 3;
   }
   
   .footer {
     min-block-size: 668px;
+  }
+
+  .content-section {
+    padding-block-start: 7.8vb;
+  }
+
+  .section-goldfish__title {
+    grid-row: 1;
+  }
+
+  .content__picture {
+    inline-size: 95vi;
+    block-size: 100%;
+    object-fit: cover;
+  }
+
+  .footer-title {
+    --font-size-heading: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 }
 
